base/organization/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-organization
  template:
    metadata:
      labels:
        app: ms-organization
    spec:
      imagePullSecrets:
      - name: oci-registry
      containers:
        - name: ms-organization
          image: iad.ocir.io/idwwmbyiyhww/meta-ms-organization:latest
          ports:
            - containerPort: 3000
              protocol: TCP
